#1453 - Fix get quote button overlap with hero image's people

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1673,6 +1673,13 @@ input.search-form:hover {
 .p_flight .tagline-holder img{width: 70%;}		
 .p_travel .tagline-holder{top: 25%;}		
 .p_travel .tagline-holder img{width: 70%;}		
+.p_oversea .tagline-holder{top: 20%;}		
+.p_oversea .tagline-holder img{width: 100%;}		
+
+@media(max-width: 1245px){		
+	.p_workingholiday .tagline-holder img{width: 70%;}		
+	.p_oversea .tagline-holder img{width: 70%;}		
+}	
 @media(max-width: 991px){		
 			
 	.tagline-holder{		
@@ -1687,15 +1694,15 @@ input.search-form:hover {
 	.p_workingholiday .tagline-holder{top: auto; bottom: 20%;}		
 	.p_flight .tagline-holder{top: auto; bottom: 20%;}		
 	.p_travel .tagline-holder{top: auto; bottom: 20%;}		
+	.p_oversea .tagline-holder{top: 0; left: 5%; width: 95%;}		
 			
 	.p_homecare .tagline-holder img{}		
 	.p_workingholiday .tagline-holder img{width: 70%;}		
 	.p_flight .tagline-holder img{width: 90%;}		
 	.p_travel .tagline-holder img{}		
-}		
-@media(max-width: 1245px){		
-	.p_workingholiday .tagline-holder img{width: 70%;}		
-}		
+	.p_oversea .tagline-holder img{width: 80%; margin:0;}		
+	.chin .p_oversea .tagline-holder img{width: 47%; margin:0;}		
+}	
 
 .slider-form .people-travelling {
 	font-style: italic;
