--- a/src/main/webapp/resources/css/oversea.css
+++ b/src/main/webapp/resources/css/oversea.css
@@ -40,7 +40,7 @@ h4.product_landing_download_button.divider{
 	text-align:center;
 	color: #ffffff;
 	font-size: 18px;
-	padding:12.5px 0 10px 0;
+	padding: 10px 20px;
 }
 
 .ups-message-wrapper{
